--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">CoderSchool_SimpleTwitterClient</string>
+    <string name="app_name">Simple Twitter Client</string>
 </resources>
