--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Simple Twitter Client</string>
+    <string name="hint_tweet_edittext">Tweet</string>
+    <string name="btn_tweet_text">Tweet</string>
+    <string name="title_home_timeline">Home</string>
 </resources>
