--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hint_tweet_edittext">Tweet</string>
     <string name="btn_tweet_text">Tweet</string>
     <string name="title_home_timeline">Home</string>
+    <string name="text_login">Login</string>
 </resources>
